# glacier-messages

./: .gitignore  CMakeLists.txt  glacier-messages.pro
daemon/: CMakeLists.txt  constants.h  main.cpp  messagesd.service  messageshandler.cpp  messageshandler.h
data/: glacier-messages.desktop  glacier-messages.service  org.freedesktop.Telepathy.Client.qmlmessages.service  org.nemomobile.qmlmessages.service
qml/: AccountSelector.qml  ChatTextInput.qml  ConversationListPage.qml  ConversationListWidget.qml  ConversationPage.qml  MessagesView.qml  TargetEditBox.qml  glacier-messages.qml
qml/common/: CommHistoryService.qml
qml/components/: CommHistoryService.qml  ConversationListDelegate.qml  ConversationListWidget.qml  MessagesService.qml  MessagesView.qml
qml/pages/: ConversationListPage.qml  ConversationPage.qml
rpm/: glacier-messages.spec
src/: CMakeLists.txt  dbusadaptor.cpp  dbusadaptor.h  main.cpp
src/qml/: glacier-messages.qml  glacier-messages.qrc
src/qml/components/: ChatTextInput.qml  ConversationListDelegate.qml  ConversationListWidget.qml  MessagesService.qml  MessagesView.qml  PageHeader.qml  TargetEditBox.qml
src/qml/pages/: ConversationListPage.qml  ConversationPage.qml
translations/: glacier-messages.ts  glacier-messages_cs.ts  glacier-messages_de.ts  glacier-messages_es.ts  glacier-messages_fi.ts  glacier-messages_fr.ts  glacier-messages_pl.ts  glacier-messages_ru.ts  glacier-messages_uk.ts  glacier-messages_vi.ts
